2006-11-17  Timothy Brownawell  <tbrownaw@gmail.com>

	Add status code reporting to the note_netsync_{begin,end} hooks.

2006-11-16  Richard Levitte  <richard@levitte.org>

	* contrib/ext_hooks.lua.in, contrib/ext_hooks_expand.pl: New
	files that implement a system that allows easy addition of hooks
	implementations without having to edit any file. You need to
	run the perl script contrib/ext_hooks_expand.pl to produce the
	file contrib/ext_hooks.lua, using contrib/ext_hooks.lua.in as
	a template and the hook function definitions found in
	monotone.texi.
	* README: Add a small blurb about the above files.

2006-11-17  Thomas Keller  <me@thomaskeller.biz>

	* cmd_automate.cc, cmd.hh, ...: renamed member variable 
	"options" to "opts" to make (hopefully) the gcc-3.3 build
	slaves happy

2006-11-15  Richard Levitte  <richard@levitte.org>

	* lua.cc (LUAEXT): Implement includedirpattern(), which is like
	includedir() but also takes a glob pattern for the files to load.
	* monotone.texi (Additional Lua Functions): Document
	includedirpattern().
	* testsuite.lua,
	tests/include()_and_includedir()_lua_functions/:
	Renamed to include()_includedir()_and_includedirpattern()_lua_functions
	__driver__.lua: Test includedirpattern().

2006-11-15  Richard Levitte  <richard@levitte.org>

	* debian/monotone-server.postinst: Add a note that a db migration
	may take a while.

2006-11-15  Thomas Keller  <me@thomaskeller.biz>

	* cmd_automate.cc: defined equal sounding error message
	"Bad input to stdio" further

2006-11-14  Thomas Keller  <me@thomaskeller.biz>

	* new automate content_diff command which is basically
	the same like mtn diff (also uses most of its infrastructure)
	minus the display of the basic_io revision header
	* tests/automate_content_diff: test for that
	* tests/automate_automate_version test renamed to
	automate_interface_version
	* monotone.texi: list formatting for automate attributes
	documentation, docs for automate content_diff