@@ -690,3 +690,4 @@ table.insert(tests, "add_ignored")
 table.insert(tests, "automate_content_diff")
 table.insert(tests, "netsync_hook_errcodes")
 table.insert(tests, "automate_stdio_options")
+table.insert(tests, "spawn_redirected_hook_helper")
