@@ -1,5 +1,10 @@
 2006-11-17  Timothy Brownawell  <tbrownaw@gmail.com>
 
+	Make spawn_redirected work with blank filenames to not redirect
+	some streams.
+
+2006-11-17  Timothy Brownawell  <tbrownaw@gmail.com>
+
 	Add status code reporting to the note_netsync_{begin,end} hooks.
 
 2006-11-16  Richard Levitte  <richard@levitte.org>
